--- a/client-web-app/src/sass/Components/LoginPage.sass
+++ b/client-web-app/src/sass/Components/LoginPage.sass
@@ -19,6 +19,8 @@
     font-size: 15px
     font-weight: 500
     cursor: pointer
+    &:visited
+      text-decoration: none
 
 .form-container
   display: flex
